Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-101718

[REG 6.3.0beta2->beta3] quick3d/principledmaterial not launching on macOS

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 6.2.5, 6.3.0 RC
    • 6.3.0 Beta3
    • Quick: 3D
    • macOS11.6
    • macOS
    • b858704e1f (qt/qtbase/dev) b858704e1f (qt/tqtc-qtbase/dev) ed186bc202 (qt/qtbase/6.2) 48922a3ea2 (qt/qtbase/6.3) ed186bc202 (qt/tqtc-qtbase/6.2) 48922a3ea2 (qt/tqtc-qtbase/6.3) 48922a3ea2 (qt/tqtc-qtbase/6.3.0)

      Install Qt6.3.0 beta3 (6e4d0b7e873be0343d537a0b4bfe3982a9a56aef) macos desktop binaries on macOS (/Users/qt/RTA/Qt_6.3.0/), configure example quick3d/principledmaterial:

      /Users/qt/RTA/Qt_6.3.0/6.3.0/macos/bin/qt-cmake -S /Users/qt/RTA/Qt_6.3.0/Examples/Qt-6.3.0/quick3d/principledmaterial -B /Users/qt/RTA/Qt_6.3.0/Examples/Qt-6.3.0/quick3d/principledmaterial/bld_macos -GNinja

      Finishes fine, compile with cmake --build . --parallel, finishes fine also.
      But, when launching, app does not launch and output has:

      QQmlApplicationEngine failed to load component
      qrc:/main.qml:110:17: Type BasicsPane unavailable
      qrc:/BasicsPane.qml:135:9: Type TextureSourceControl unavailable
      qrc:/TextureSourceControl.qml:151:9: ImageHelper is not a type
      

      Example launches on Ubuntu20.04.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            alexandru.croitor Alexandru Croitor
            joaijala Johanna Äijälä
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: