CMake: Work around moc not including QtQml header

Which would cause the ImageHelper type not to be registered by
qmltyperegistrar and a failure to run the example.

Pick-to: 6.3
Task-number: QTBUG-101718
Change-Id: I80fa7b66833ca70d716323fcf678325d2348bed0
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>